# BattleCityRemaster

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  RefreshCmake.sh
src/: AIManager.cpp  AIManager.h  CMakeLists.txt  CollisionManager.cpp  CollisionManager.h  Components.h  Config.h  DebugManager.cpp  DebugManager.h  DotSceneLoader.cpp  DotSceneLoader.h  EntityManager.h  Factory.cpp  Factory.h  HealthManager.cpp  HealthManager.h  HeatingManager.cpp  HeatingManager.h  InputManager.cpp  InputManager.h  Logger.h  ManagerInterface.h  MapManager.cpp  MapManager.h  MessageManager.h  Messages.h  MovementManager.cpp  MovementManager.h  ParticleManager.cpp  ParticleManager.h  PlayerManager.cpp  PlayerManager.h  Registry.hpp  RenderManager.cpp  RenderManager.h  SceneManager.cpp  SceneManager.h  ScoreManager.cpp  ScoreManager.h  Screen.cpp  (+9 more)
